--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://watso.co.kr/InHouse/CarFriend-LTE-ENTER.ipa</string>
+					<string>https://nextlevel76.github.io/app_down/CarFriend-LTE-ENTER.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://watso.co.kr/InHouse/Icon-57.png</string>
+					<string>https://nextlevel76.github.io/app_down/Icon-57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://watso.co.kr/InHouse/Icon-512.png</string>
+					<string>https://nextlevel76.github.io/app_down/Icon-512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
